--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_lecture_view_activiy">Title</string>
     <string name="large_text">Random text</string>
+    <string name="feedbacktype1">Bug in question</string>
+    <string name="feedbacktype2">Request new question</string>
+    <string-array name="feedbacktypelist">
+        <item>@string/feedbacktype1</item>
+        <item>@string/feedbacktype2</item>
+    </string-array>
 </resources>
