--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_lecture_view_activiy">Title</string>
     <string name="large_text">Random text</string>
+    <string name="title_activity_quiz_view">QuizViewActivity</string>
 </resources>
